# cbz-merger

./: .gitignore  .ruff.toml  DEVELOPER.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/cbz_merger/: __init__.py  cli.py  merge.py
tests/: test_merge.py
